simulate keydown event in HandleUKeyEvent; bug 184549; r=smfr, sr=bryner, a=asa